welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: type mismatch;
 found   : Unit
 required: Boolean
                            for (compteur <- 1 to 6) {if (estSurBiscuit()) {vuBiscuit = true} else {avance()}}
                                          ^